--- a/sneha.html
+++ b/sneha.html
@@ -48,9 +48,9 @@
 
             <tr>
 
-                <th rowspan="  3">Language </th>
+                <th >Language </th>
 
-                <th rowspan="3"> Skill</th>
+                <th > Skill</th>
 
             </tr>
 
@@ -154,9 +154,10 @@
         <label for="message"><b>Your Message:</b></label>
 
 
-        <input type="text" id="message" value="Enter Your Message">
-
-    </div>
+     <textarea id="Enter Your Message" name= "contact me rows=" 4" cols=" 50" placeholder=" Enter Your Message">
+  
+                                                                                                               
+                                                                                                               </div>
 
     </p>
 
